@@ -1,60 +1,50 @@
 package com.tesa.studyfinder.service;
 
 import com.tesa.studyfinder.model.StudyGroup;
+import com.tesa.studyfinder.repo.StudyGroupRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Service
+@RequiredArgsConstructor
 public class StudyGroupService {
-    // In‑memory store of all groups
-    private final Map<String, StudyGroup> groups = new HashMap<>();
-    // Map of userEmail → set of group IDs they belong to
-    private final Map<String, Set<String>> userGroups = new HashMap<>();
+    private final StudyGroupRepository repo;
 
     public StudyGroup createGroup(StudyGroup group) {
-        groups.put(group.getId(), group);
-        return group;
+        return repo.save(group);
     }
 
     public List<StudyGroup> viewAllGroups() {
-        return new ArrayList<>(groups.values());
+        return repo.findAll();
     }
 
     public List<StudyGroup> viewGroupsByCourse(String courseTitle) {
-        return groups.values().stream()
-                .filter(g -> g.getCourseTitle().equalsIgnoreCase(courseTitle))
-                .collect(Collectors.toList());
+        return repo.findByCourseTitleIgnoreCase(courseTitle);
     }
 
     public List<StudyGroup> viewGroupsByUser(String userEmail) {
-        return userGroups.getOrDefault(userEmail, Collections.emptySet())
-                .stream()
-                .map(groups::get)
-                .collect(Collectors.toList());
+        return repo.findAll().stream()
+                .filter(g -> g.getMembers().contains(userEmail))
+                .toList();
     }
 
     public boolean joinGroup(String groupId, String userEmail) {
-        StudyGroup group = groups.get(groupId);
-        if (group == null || group.getMembers().size() >= group.getMaxSize()) {
-            return false;
-        }
-        group.getMembers().add(userEmail);
-        userGroups.computeIfAbsent(userEmail, k -> new HashSet<>()).add(groupId);
-        return true;
+        return repo.findById(groupId).map(g -> {
+            if (g.getMembers().size() >= g.getMaxSize()) return false;
+            if (g.getMembers().contains(userEmail)) return false;
+            g.getMembers().add(userEmail);
+            repo.save(g);
+            return true;
+        }).orElse(false);
     }
 
     public boolean leaveGroup(String groupId, String userEmail) {
-        StudyGroup group = groups.get(groupId);
-        if (group == null) {
-            return false;
-        }
-        if (group.getMembers().remove(userEmail)) {
-            Set<String> set = userGroups.get(userEmail);
-            if (set != null) set.remove(groupId);
-            return true;
-        }
-        return false;
+        return repo.findById(groupId).map(g -> {
+            boolean removed = g.getMembers().remove(userEmail);
+            if (removed) repo.save(g);
+            return removed;
+        }).orElse(false);
     }
 }
